# simulations

./: AF_parallel.py  AF_sphere_plot.py  DEPENDENCY_TREE.md  FILE_MAP.md  README.md  analytical_patterns.py  beam.py  function_signature_map.md  helpers.py  mc_generalAF.py  mcpattern.py  parallel_test.py  project_birds_eye_view.md  pyproject.toml  radiation_pattern_plot.py  rpattern.py  rplotting.py  run_sim.py  setup_params.py  test.py  test_analytical_plots.py  test_beam.py  test_static.py
scripts/: multirunGaussian.py  multirun_static.py  sanity_checks.py  sweep.py  sweep_ex2.py  sweep_exp.py
src/radpattern/geometry/: cloud_model.py  grids.py  sampling.py
src/radpattern/helpers/: geometry.py  helpers.py  io.py
src/radpattern/physics/: analytical_patterns.py  beam.py  dipole.py  mcpattern.py  rpattern.py  setup_params.py
src/radpattern/plotting/: Iheatmap.py  analytical_plotting.py  pattern_3d.py  plotanimation.py  rplotting.py
tests/: experimental_numbers_tets.py  ploting_sim_timedependet.py  plotting_test.py  test.py  test_animation.py  test_static.py
