[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radpattern"
version = "0.1.0"
description = "Simulation and analytical tools for radiation and scattering patterns"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Radek" }
]
dependencies = [
  "numpy",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
